# autobing

./: .gitignore  Cargo.toml  README.md  browser_scanner.spec  build-executable.ps1  capture_earn.py  inspect_streak.py  log.md  main.py  old_native_be033.py  requirements.txt  setup.bat  start.bat  start_cli.bat  start_cmd.bat  start_web.bat  test_current_streak.py  test_regex.py  test_streak_monitor.py  update.json  worker_api.spec
autobing-app/: index.html  package-lock.json  package.json  playwright.config.ts  updater.key  updater.key.pub
config/: accounts.example.json  flows.json  search_topics.txt  settings.example.json
dashboard/: app.js  index.html  style.css
src/: __init__.py  ai_agent.py  browser.py  browser_scanner.py  captcha_solver.py  control_plane.py  control_plane_api.py  crypto.py  daily_set.py  dashboard.py  dashboard_scraper.py  edge_streak_native.py  google_sheets.py  humanizer.py  job_protocol.py  login.py  macro_player.py  manual_captcha.py  mobile_app.py  notifier.py  page_agent_flow.py  points.py  promotions.py  punch_cards.py  quiz.py  quiz_solver.py  runner.py  runtime_identity.py  scheduler.py  searcher.py  streaks.py  trends.py  universal_task.py  utils.py  worker_api.py  worker_runtime.py  worker_store.py
tests/: __init__.py  test_browser_lifecycle.py  test_control_plane_api.py  test_control_plane_seams.py  test_dashboard_routes.py  test_dashboard_status.py  test_rewards_trust.py  test_runtime_paths.py  test_universal_task_timeouts.py  test_vault_docs_smoke.py  test_worker_api.py  test_worker_runtime.py  test_worker_store.py
(+27 files in other folders)
